--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,8 @@ ul {
 .headline,
 .subheadline {
     color: #001641;
+    font-family: 'Arimo', sans-serif;
+    font-weight: 700;
 }
 
 .no-bs .btn {
@@ -63,6 +65,14 @@ ul {
     border: 0;
 }
 
+.card .fas {
+    float: right;
+    padding-right: 20px;
+    position: relative;
+    font-size: 22px;
+    top: 3px;
+}
+
 .no-bs .card-header {
     background-color: #fff;
     padding: 16px 0;
@@ -76,11 +86,19 @@ ul {
     margin-bottom: 40px;
 }
 
+.page-container {
+    padding-top: 60px;
+}
+
 
 @media (min-width: 768px) {
     .headline {
         font-size: 54px;
         line-height: 54px;
+    }
+
+    .card .fas {
+        padding-right: 40px;
     }
 }
 
@@ -88,6 +106,20 @@ ul {
     .headline {
         font-size: 46px;
         line-height: 46px;
+    }
+
+    .card .fas {
+        padding-right: 60px;
+    }
+
+    .main-info {
+        margin-bottom: 60px;
+    }
+
+    .main-info .featured {
+        font-size: 25px;
+        letter-spacing: 1px;
+        line-height: 34px;
     }
 
     .no-bs .page-left {
